Creating a doctor info controller and modifying and inserting data using the upset method.
